Bug 1365002 - Don't remove the back button background on state change. r=dao
This CSS rule made certain actions on MacOS look strange, e.g.
active without hover, and it doesn't appear to be needed on the
other platforms since the background is always overriden when needed.

MozReview-Commit-ID: Af6WnEspW5q

UltraBlame original commit: bf6b08540d0c69aad08b29a1cbb0d853107ebbcd

--- a/browser/themes/shared/toolbarbuttons.inc.css
+++ b/browser/themes/shared/toolbarbuttons.inc.css
@@ -3649,74 +3649,6 @@ color
 !
 important
 ;
-}
-:
--
-moz
--
-any
-(
-#
-back
--
-button
-#
-forward
--
-button
-)
-:
-not
-(
-:
-hover
-)
-:
-not
-(
-:
-active
-)
-:
-not
-(
-[
-open
-=
-true
-]
-)
->
-.
-toolbarbutton
--
-icon
-:
--
-moz
--
-any
-(
-#
-back
--
-button
-#
-forward
--
-button
-)
-[
-disabled
-=
-true
-]
->
-.
-toolbarbutton
--
-icon
-{
 background
 :
 var
@@ -3727,8 +3659,6 @@ backbutton
 -
 background
 )
-!
-important
 ;
 }
 #
@@ -4175,6 +4105,17 @@ icon
 %
 ifdef
 MOZ_PHOTON_THEME
+background
+:
+var
+(
+-
+-
+backbutton
+-
+background
+)
+;
 border
 -
 color
@@ -4209,70 +4150,6 @@ padding
 important
 ;
 }
-%
-ifdef
-MOZ_PHOTON_THEME
-#
-back
--
-button
-:
-not
-(
-:
-hover
-)
-:
-not
-(
-:
-active
-)
-:
-not
-(
-[
-open
-=
-true
-]
-)
->
-.
-toolbarbutton
--
-icon
-#
-back
--
-button
-[
-disabled
-=
-true
-]
->
-.
-toolbarbutton
--
-icon
-{
-background
-:
-var
-(
--
--
-backbutton
--
-background
-)
-!
-important
-;
-}
-%
-endif
 /
 *
 bookmarks
